--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -727,9 +727,9 @@
                                                           <select style="width:auto; display:inline; margin-right: 5px;" ng-model="recurrenceInterval" id="internvalPicker" class="form-control ">
                                                               <option ng-repeat="a in range(10) track by $index" value="{{$index+1}}">{{$index + 1}}</option>
                                                           </select>
-                                                          <span ng-show="recurrenceFrequency == 2">week<span ng-show="recurrenceInterval !== 1">s</span></span>
-                                                          <span ng-show="recurrenceFrequency == 1">month<span ng-show="recurrenceInterval !== 1">s</span></span>
-                                                          <span ng-show="recurrenceFrequency == 0">year<span ng-show="recurrenceInterval !== 1">s</span></span>  
+                                                          <span ng-show="recurrenceFrequency == 2">week<span ng-show="recurrenceInterval != 1">s</span></span>
+                                                          <span ng-show="recurrenceFrequency == 1">month<span ng-show="recurrenceInterval != 1">s</span></span>
+                                                          <span ng-show="recurrenceFrequency == 0">year<span ng-show="recurrenceInterval != 1">s</span></span>  
                                                           </div>
                                                       </div>
                                                 </div>                                                 
