Pushing fix for possible type checking bug
Jyoti uncovered this issue, but it only seems to be reproducible on her
box. Either way, this is probably a better way to achieve the same
result, so I’ll push this and change it in the markets branch as well.

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -628,7 +628,7 @@
                                     </div>                        
                                 </div>
                                 <!-- One Time Date Options -->
-                                <div ng-show="locationType" class="row">
+                                <div ng-show="locationType == 'true'" class="row">
                                     <div class="col-xs-12 col-md-6">
                                         <div class="form-group">
                                           <label>Date:</label>                      
@@ -654,7 +654,7 @@
                                     </div>
                                 </div>
                                 <!-- Regular Hour Options -->
-                                <div ng-hide="locationType">
+                                <div ng-hide="locationType == 'true'">
                                     <label>Hours:</label>
                                     <div class="well">
                                         <div class="row">
@@ -705,7 +705,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div ng-hide="locationType">
+                                <div ng-hide="locationType == 'true'">
                                     <label>Repeat:</label>
                                     <div class="well">
                                         <ng-form name="recurrenceForm">                                       
