Pushing all the date changes for markets

--- a/src/client/app/views/manage.html
+++ b/src/client/app/views/manage.html
@@ -87,10 +87,10 @@
                             <span ng-show="isBeforeRecurrence(minDate, initDate(location.recurrences.start_date))">
                                 REOPENING FOR THE SEASON <span style="color: black">ON</span>
                             </span>                                                          
-                            <span ng-show="compareDates(getMonday(minDate), initDate(location.recurrences.start_date))">
+                            <span ng-show="compareDates(getMonday(minDate), initDate(location.recurrences.next))">
                                 <b><span ng-show="location.recurrences && location.address.hours.length != 0"> THIS WEEK:</span></b>
                             </span>
-                            <span ng-hide="compareDates(getMonday(minDate), initDate(location.recurrences.start_date))">
+                            <span ng-hide="compareDates(getMonday(minDate), initDate(location.recurrences.next))">
                                 <b><span ng-show="location.recurrences && checkEndDate(minDate, initDate(location.recurrences.end_date))">THE WEEK OF {{getMonday(initDate(location.recurrences.next)) | date:"MMMM d'" | uppercase}} TO {{addDays(getMonday(initDate(location.recurrences.next)), 6) | date:"MMMM d'" | uppercase}}:</span></b>
                             </span>
                             <div ng-show="location.address.hours.length === 0 || !checkEndDate(minDate, initDate(location.recurrences.end_date))">
@@ -99,7 +99,7 @@
                             <div ng-hide="location.address.hours.length === 0 || !checkEndDate(minDate, initDate(location.recurrences.end_date))">
                                 <ul class="list-inline store-hours">&nbsp
                                     <li ng-repeat="day in location.address.hours">
-                                        <span ng-hide="compareDates(getMonday(initDate(location.recurrences.next)), initDate(location.recurrences.start_date)) && day.weekday < initDate(location.real_start).getDay()"><b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}</span>
+                                        <span ng-hide="compareDates(getMonday(minDate), initDate(location.recurrences.start_date)) && compareDates(getMonday(minDate), initDate(location.recurrences.next)) && (day.weekday < getDate(initDate(location.real_start)) || day.weekday < getDate(minDate))"><b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}</span>
                                     </li>
                                 </ul> 
                             </div>
