--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -136,16 +136,33 @@
                                 {{location.address.state}}, 
                                 {{location.address.zipcode}}
                             </p>
-                            <p><b>HOURS:</b>
-                                    <ul class="list-inline store-hours">&nbsp
-                                    <li ng-repeat="day in location.address.hours">
-                                        <b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}
-                                    </li>
-
-                                    </ul>
+                            <p ng-show="location.recurrences && location.address.hours.length !== 0 && checkEndDate(minDate, initDate(location.recurrences.end_date))"><b>DATES:</b>
+                                {{location.recurrences.text | capitalize}} from {{location.real_start | date:"MMMM d'"}}
+                                <span ng-show="location.recurrences.end_date"> to {{location.recurrences.end_date | date:"MMMM d'"}}</span>
                             </p>
-
-                           <p class="indent-after-first-line"><b>DETAILS:</b>
+                            <span ng-show="location.recurrences && isInsideRecurrence(minDate, initDate(location.recurrences.start_date), initDate(location.recurrences.end_date)) && location.address.hours.length != 0">
+                                <b>OPEN</b>
+                            </span>
+                            <span ng-show="location.recurrences && isBeforeRecurrence(minDate, initDate(location.recurrences.start_date))">
+                                <b>REOPENING FOR THE SEASON <span style="color: black">ON</span></b>
+                            </span>                                                          
+                            <span ng-show="compareDates(getMonday(minDate), initDate(location.recurrences.next))">
+                                <b><span ng-show="location.recurrences && location.address.hours.length != 0"> THIS WEEK:</span></b>
+                            </span>
+                            <span ng-hide="compareDates(getMonday(minDate), initDate(location.recurrences.next))">
+                                <b><span ng-show="location.recurrences && checkEndDate(minDate, initDate(location.recurrences.end_date))">THE WEEK OF {{getMonday(initDate(location.recurrences.next)) | date:"MMMM d'" | uppercase}} TO {{addDays(getMonday(initDate(location.recurrences.next)), 6) | date:"MMMM d'" | uppercase}}:</span></b>
+                            </span>
+                            <div ng-show="location.address.hours.length === 0 || !checkEndDate(minDate, initDate(location.recurrences.end_date))">
+                                <b>CLOSED FOR THE SEASON</b>
+                            </div>
+                            <div ng-hide="location.address.hours.length === 0 || !checkEndDate(minDate, initDate(location.recurrences.end_date))">
+                                <ul class="list-inline store-hours">&nbsp
+                                    <li ng-repeat="day in location.address.hours">
+                                        <span ng-hide="compareDates(getMonday(minDate), initDate(location.recurrences.start_date)) && compareDates(getMonday(minDate), initDate(location.recurrences.next)) && (day.weekday < getDate(initDate(location.real_start))) || (checkEndDate(minDate, initDate(location.recurrences.end_date)) && (day.weekday < getDate(initDate(location.real_start))))"><b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}</span>
+                                    </li>
+                                </ul> 
+                            </div>
+                           <p class="indent-after-first-line"><b>DETAILS:<br></b>
                                  {{location.description}}
                             </p>
                         </div>    
