--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -136,29 +136,29 @@
                                 {{location.address.state}}, 
                                 {{location.address.zipcode}}
                             </p>
-                            <p ng-show="location.recurrences && location.address.hours.length !== 0 && checkEndDate(minDate, initDate(location.recurrences.end_date))"><b>DATES:</b>
+                            <p ng-show="DateService.showDateString(location)"><b>DATES:</b>
                                 {{location.recurrences.text | capitalize}} from {{location.real_start | date:"MMMM d'"}}
                                 <span ng-show="location.recurrences.end_date"> to {{location.recurrences.end_date | date:"MMMM d'"}}</span>
                             </p>
-                            <span ng-show="location.recurrences && isInsideRecurrence(minDate, initDate(location.recurrences.start_date), initDate(location.recurrences.end_date)) && location.address.hours.length != 0">
+                            <span ng-show="DateService.showOpenString(location)">
                                 <b>OPEN</b>
                             </span>
-                            <span ng-show="location.recurrences && isBeforeRecurrence(minDate, initDate(location.recurrences.start_date))">
+                            <span ng-show="DateService.showReopeningString(location)">
                                 <b>REOPENING FOR THE SEASON <span style="color: black">ON</span></b>
                             </span>                                                          
-                            <span ng-show="compareDates(getMonday(minDate), initDate(location.recurrences.next))">
+                            <span ng-show="DateService.showThisWeekString(location)">
                                 <b><span ng-show="location.recurrences && location.address.hours.length != 0"> THIS WEEK:</span></b>
                             </span>
-                            <span ng-hide="compareDates(getMonday(minDate), initDate(location.recurrences.next))">
-                                <b><span ng-show="location.recurrences && checkEndDate(minDate, initDate(location.recurrences.end_date))">THE WEEK OF {{getMonday(initDate(location.recurrences.next)) | date:"MMMM d'" | uppercase}} TO {{addDays(getMonday(initDate(location.recurrences.next)), 6) | date:"MMMM d'" | uppercase}}:</span></b>
+                            <span ng-hide="DateService.hideTheWeekOfContainer(location)">
+                                <b><span ng-show="DateService.showTheWeekOfString(location)">THE WEEK OF {{DateService.getMonday(DateService.initDate(location.recurrences.next)) | date:"MMMM d'" | uppercase}} TO {{DateService.addDays(DateService.getMonday(DateService.initDate(location.recurrences.next)), 6) | date:"MMMM d'" | uppercase}}:</span></b>
                             </span>
-                            <div ng-show="location.address.hours.length === 0 || !checkEndDate(minDate, initDate(location.recurrences.end_date))">
+                            <div ng-show="DateService.showClosedForTheSeasonString(location)">
                                 <b>CLOSED FOR THE SEASON</b>
                             </div>
-                            <div ng-hide="location.address.hours.length === 0 || !checkEndDate(minDate, initDate(location.recurrences.end_date))">
+                            <div ng-hide="DateService.hideWeekdayContainer(location)">
                                 <ul class="list-inline store-hours">&nbsp
                                     <li ng-repeat="day in location.address.hours">
-                                        <span ng-hide="compareDates(getMonday(minDate), initDate(location.recurrences.start_date)) && compareDates(getMonday(minDate), initDate(location.recurrences.next)) && (day.weekday < getDate(initDate(location.real_start))) || (checkEndDate(minDate, initDate(location.recurrences.end_date)) && (day.weekday < getDate(initDate(location.real_start))))"><b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}</span>
+                                        <span ng-hide="DateService.hideWeekday(location, day)"><b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}</span>
                                     </li>
                                 </ul> 
                             </div>
@@ -221,15 +221,15 @@
                                 </p>                                
 
                                 <div ng-show="location.date == null">
-                                <span ng-show="compareDates(getMonday(minDate), initDate(location.recurrences.next))">
+                                <span ng-show="DateService.showThisWeekString(location)">
                                     <p><b>HOURS<span ng-show="location.recurrences"> FOR THIS WEEK</span>:</b></p>
                                 </span>                                
-                                <span ng-hide="compareDates(getMonday(minDate), initDate(location.recurrences.next))">
+                                <span ng-hide="DateService.showThisWeekString(location)">
                                     <p><b>HOURS<span ng-show="location.recurrences"> FOR THE WEEK OF {{getMonday(initDate(location.recurrences.next)) | date:"MMMM d'" | uppercase}} TO {{addDays(getMonday(initDate(location.recurrences.next)), 6) | date:"MMMM d'" | uppercase}}</span>:</b></p>
                                 </span>
                                         <ul class="list-inline store-hours">&nbsp
                                         <li ng-repeat="day in location.address.hours">
-                                            <span ng-hide="compareDates(getMonday(minDate), initDate(location.recurrences.start_date)) && compareDates(getMonday(minDate), initDate(location.recurrences.next)) && (day.weekday < getDate(initDate(location.real_start))) || (checkEndDate(minDate, initDate(location.recurrences.end_date)) && (day.weekday < getDate(initDate(location.real_start))))"><b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}</span>
+                                            <span ng-hide="DateService.hideWeekday(location, day)"><b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}</span>
                                         </li>
                                         </ul>
                                 </div>
@@ -850,29 +850,29 @@
                                             <p style="text-indent: -25px !important; margin-left: 25px !important;">
                                                 <b>Description:</b> {{newLocationMarket.description}}
                                             </p>
-                                            <p ng-show="newLocationMarket.recurrences && newLocationMarket.address.hours.length !== 0 && checkEndDate(minDate, initDate(newLocationMarket.recurrences.end_date))"><b>DATES:</b>
+                                            <p ng-show="DateService.showDateString(newLocationMarket)"><b>DATES:</b>
                                                 {{newLocationMarket.recurrences.text | capitalize}} from {{newLocationMarket.real_start | date:"MMMM d'"}}
                                                 <span ng-show="newLocationMarket.recurrences.end_date"> to {{newLocationMarket.recurrences.end_date | date:"MMMM d'"}}</span>
                                             </p>
-                                            <span ng-show="newLocationMarket.recurrences && isInsideRecurrence(minDate, initDate(newLocationMarket.recurrences.start_date), initDate(newLocationMarket.recurrences.end_date)) && newLocationMarket.address.hours.length != 0">
+                                            <span ng-show="DateService.showOpenString(newLocationMarket)">
                                                 <b>OPEN</b>
                                             </span>
-                                            <span ng-show="newLocationMarket.recurrences && isBeforeRecurrence(minDate, initDate(newLocationMarket.recurrences.start_date))">
+                                            <span ng-show="DateService.showReopeningString(newLocationMarket)">
                                                 <b>REOPENING FOR THE SEASON <span style="color: black">ON</span></b>
                                             </span>                                                          
-                                            <span ng-show="compareDates(getMonday(minDate), initDate(newLocationMarket.recurrences.next))">
+                                            <span ng-show="DateService.showThisWeekString(newLocationMarket)">
                                                 <b><span ng-show="newLocationMarket.recurrences && newLocationMarket.address.hours.length != 0"> THIS WEEK:</span></b>
                                             </span>
-                                            <span ng-hide="compareDates(getMonday(minDate), initDate(newLocationMarket.recurrences.next))">
-                                                <b><span ng-show="newLocationMarket.recurrences && checkEndDate(minDate, initDate(newLocationMarket.recurrences.end_date))">THE WEEK OF {{getMonday(initDate(newLocationMarket.recurrences.next)) | date:"MMMM d'" | uppercase}} TO {{addDays(getMonday(initDate(newLocationMarket.recurrences.next)), 6) | date:"MMMM d'" | uppercase}}:</span></b>
+                                            <span ng-hide="DateService.hideTheWeekOfContainer(newLocationMarket)">
+                                                <b><span ng-show="DateService.showTheWeekOfString(newLocationMarket)">THE WEEK OF {{DateService.getMonday(DateService.initDate(newLocationMarket.recurrences.next)) | date:"MMMM d'" | uppercase}} TO {{DateService.addDays(DateService.getMonday(DateService.initDate(newLocationMarket.recurrences.next)), 6) | date:"MMMM d'" | uppercase}}:</span></b>
                                             </span>
-                                            <div ng-show="newLocationMarket.address.hours.length === 0 || !checkEndDate(minDate, initDate(newLocationMarket.recurrences.end_date))">
+                                            <div ng-show="DateService.showClosedForTheSeasonString(newLocationMarket)">
                                                 <b>CLOSED FOR THE SEASON</b>
                                             </div>
-                                            <div ng-hide="newLocationMarket.address.hours.length === 0 || !checkEndDate(minDate, initDate(newLocationMarket.recurrences.end_date))">
+                                            <div ng-hide="DateService.hideWeekdayContainer(newLocationMarket)">
                                                 <ul class="list-inline store-hours">&nbsp
                                                     <li ng-repeat="day in newLocationMarket.address.hours">
-                                                        <span ng-hide="compareDates(getMonday(minDate), initDate(newLocationMarket.recurrences.start_date)) && compareDates(getMonday(minDate), initDate(newLocationMarket.recurrences.next)) && (day.weekday < getDate(initDate(newLocationMarket.real_start))) || (checkEndDate(minDate, initDate(newLocationMarket.recurrences.end_date)) && (day.weekday < getDate(initDate(newLocationMarket.real_start))))"><b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}</span>
+                                                        <span ng-hide="DateService.hideWeekday(newLocationMarket, day)"><b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}</span>
                                                     </li>
                                                 </ul> 
                                             </div>
